--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,31 @@
-<p>index works!</p>
+<div class="home-container"> 
+    <div class="text-area">
+    <div class="text-5xl text-yellow-500 text-start">
+        <h1>Hello! I am Gabriel Malanday</h1>
+    </div>
+    <div class="text-2xl text-start">
+        <p>A Fullstack Developer</p>
+    </div>
+</div>
+<div class="flex justify-start m-11">
+    <div class="flex justify-start space-x-4">
+        <img src="../../assets/mysql.png" class="w-12 h-12">
+        <img src="../../assets/express.png" class="w-12 h-12">
+        <img src="../../assets/angular.png" class="w-15 h-12">
+        <img src="../../assets/node-js.svg" class="w-12 h-12">
+    </div>
+</div>
+<div class="button-container m-10 flex justify-start space-x-4">
+    <button class="bg-transparent hover:bg-yellow-500 text-yellow-500 font-semibold hover:text-white py-2 px-4 border border-yellow-500 hover:border-transparent rounded">
+        Hire Me
+      </button>
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded">
+        View Works
+      </button>
+</div>
+<div class="blob absolute top-1/2 transform -translate-y-1/2 right-4">
+    <div class="hero flex justify-center items-center">
+        <img src="../../assets/hero.png" class="rounded-full">
+    </div>
+</div>
+</div>
