--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,13 @@
 <nav class="bg-blue-700 h-20 text-center flex flex-col">
     <ul class="flex m-6">
       <li class="flex-1 w-64">
-        <a class="nav-link" routerLink="/nav" routerLinkActive="active" ariaCurrentWhenActive="page">HOME</a>
+        <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">HOME</a>
       </li>
       <li class="flex-1 w-32">
-        <a class="nav-link" routerLink="/second-component" routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT US</a>
+        <a class="nav-link" routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT US</a>
       </li>
       <li class="flex-1 w-32">
-        <a class="nav-link" routerLink="/second-component" routerLinkActive="active" ariaCurrentWhenActive="page">MY WORKS</a>
+        <a class="nav-link" routerLink="/work" routerLinkActive="active" ariaCurrentWhenActive="page">MY WORKS</a>
       </li>
       <li class="flex-1 w-32">
         <a class="nav-link" routerLink="/second-component" routerLinkActive="active" ariaCurrentWhenActive="page">CONTACT ME</a>
