--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<div class="">
+    <div class="text-center">
+        <h1 class="text-7xl">Hello!</h1>
+        <h1>I'm Gabriel,</h1>
+    </div>
+    <div class="paragraph ">
+        <p class="text-justify">As an IT student with a passion for web development and UI/UX design, I bring a unique blend of technical expertise and creative flair to the table. With a keen eye for detail and a commitment to user-centered design principles, I strive to craft intuitive and visually appealing digital experiences.</p>
+    </div>
+</div>
