--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
         <a class="nav-link" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">HOME</a>
       </li>
       <li class="flex-1 w-32">
-        <a class="nav-link" routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT US</a>
+        <a class="nav-link" routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT ME</a>
       </li>
       <li class="flex-1 w-32">
         <a class="nav-link" routerLink="/works" routerLinkActive="active" ariaCurrentWhenActive="page">MY WORKS</a>
@@ -19,7 +19,7 @@
     .nav-link {
       position: relative;
       text-decoration: none;
-      color: white;
+      color: rgb(226 232 240);
       transition: all 0.3s;
     }
   
@@ -30,7 +30,7 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background-color: white;
+      background-color: rgb(226 232 240);
       transform: scaleX(0);
       transition: transform 0.3s;
     }
