--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,30 @@
-<div class="">
-    <div class="text-center">
-        <h1 class="text-7xl">Hello!</h1>
-        <h1>I'm Gabriel,</h1>
+<div class="h-screen flex flex-col justify-start items-start m-10">
+    <div>
+        <h1 class="text-7xl text-yellow-500">Hello!</h1>
+        <h1 class="text-3xl font-lighter m-0.5">I'm Gabriel,</h1>
     </div>
-    <div class="paragraph ">
-        <p class="text-justify">As an IT student with a passion for web development and UI/UX design, I bring a unique blend of technical expertise and creative flair to the table. With a keen eye for detail and a commitment to user-centered design principles, I strive to craft intuitive and visually appealing digital experiences.</p>
+    <div class="photo container flex justify-center items-center">
+        <img src="../../assets/about.png" class="rounded-full h-40 w-40"> 
+    </div>
+    <div class="paragraph flex justify-center text-justify">
+        <p class="text-xl font-regular text-black leading-relaxed mt-6 mb-4 text-red-800 mx-5">
+            As an IT student with a passion for web development and UI/UX design, 
+            I bring a unique blend of technical expertise and creative flair to the table. 
+            With a keen eye for detail and a commitment to user-centered design principles, 
+            I strive to craft intuitive and visually appealing digital experiences.
+        </p>
+        <p class="text-xl font-regular text-black leading-relaxed mt-6 mb-4 text-red-800 mx-5">
+            My journey in IT has been marked by a continuous pursuit of knowledge and hands-on experience. 
+            Through coursework, personal projects, and internships, 
+            I have honed my skills in front-end development technologies such as HTML, CSS, JavaScript, 
+            and frameworks like React and Vue.js. Moreover, I have delved into backend development with 
+            languages like Node.js and databases such as MongoDB and MySQL, enabling me to build robust and scalable web applications.
+        </p>
+        <p class="text-xl font-regular text-black leading-relaxed mt-6 mb-4 text-red-800 mx-5">
+            I am eager to leverage my skills and passion for IT to contribute to innovative projects and collaborate with talented teams.
+             With a commitment to staying abreast of emerging technologies and design trends, 
+             I am excited about the opportunity to make meaningful contributions in the ever-evolving 
+             landscape of web development and UI/UX design.
+        </p>
     </div>
 </div>
