--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,7 +3,7 @@
     <div class="text-6xl text-yellow-500 text-start">
         <h1>Hello! I am Gabriel Malanday</h1>
     </div>
-    <div class="text-2xl text-start">
+    <div class="text-2xl text-start text-blue-700">
         <p>A Fullstack Developer</p>
     </div>
 </div>
@@ -23,7 +23,7 @@
         View Works
       </button>
 </div>
-<div class="blob absolute top-1/2 transform -translate-y-1/2 right-4">
+<div class="blob absolute top-1/2 transform -translate-y-1/2 right-4 drop-shadow-2xl">
     <div class="hero flex justify-center items-center">
         <img src="../../assets/hero.png" class="rounded-full">
     </div>
