--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -16,12 +16,16 @@
     </div>
 </div>
 <div class="button-container m-10 flex justify-start space-x-4">
+    <a class="nav-link" routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page">
     <button class="bg-transparent hover:bg-yellow-500 text-yellow-500 font-semibold hover:text-white py-2 px-4 border border-yellow-500 hover:border-transparent rounded">
         Hire Me
       </button>
+    </a>
+      <a class="nav-link" routerLink="/works" routerLinkActive="active" ariaCurrentWhenActive="page">
       <button class="bg-blue-700 hover:bg-blue-800 text-white font-bold py-2 px-4 border border-blue-700 rounded">
         View Works
       </button>
+    </a>
 </div>
 <div class="blob absolute top-1/2 transform -translate-y-1/2 right-4 drop-shadow-2xl">
     <div class="hero flex justify-center items-center">
