--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -57,7 +57,7 @@
                                 <h3 class="mb-2 text-lg font-medium leading-6 text-blue-600 dark:blue-600">Contact
                                 </h3>
                                 <p class="text-gray-600 dark:text-slate-400">Mobile: +63 (922) 293-2404</p>
-                                <p class="text-gray-600 dark:text-slate-400">Mail: gabriel.malanday@lccbonline.edu.ph</p>
+                                <p class="text-gray-600 dark:text-slate-400">Mail: gabriel.malanday&#64;lccbonline.edu.ph</p>
                             </div>
                         </li>
                         <li class="flex">
